# TIU-ReID

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  sitecustomize.py
data/: README.md
env/: env_cpu.yml  env_cuda118.yml
output/: README.md
scripts/: aggregate_ablation_table.py  auto_unlearn_single_id.sh  batch_eval_test_multitarget.py  build_id_mapping.py  build_neighbor_cache.py  compare_runs.py  diagnose_removable.py  download_datasets.sh  env.sh  eval_ablation_multi_seed.sh  eval_and_append_master.py  eval_baseline_probes.py  eval_probe.py  eval_removable_modes.py  eval_removable_modes.sh  eval_test_split.py  extract_teacher_features.py  generate_ablation_table.py  generate_multitarget_table.py  generate_sota_table.py  generate_workshop_table.py  make_fig_index.py  make_probe_sets.py  make_test_lists.py  plot_tiu_ablation_bars.py  plot_tiu_difficulty_scatter.py  plot_tiu_main_bars.py  plot_tiu_sweep1_3d.py  plot_tiu_sweep2_3d.py  plot_tiu_sweep_combined.py  plot_tiu_tune_heatmap.py  probe_stats.py  regenerate_multitarget_summary.py  run_ablation_multi_seed.sh  run_all_tiu_plots.sh  run_baselines.sh  run_multitarget_v2.py  run_retfix_sweep.sh  run_single_retfix.sh  sanity_report.py  (+9 more)
scripts/plotting/: __init__.py  style.py
tools/: README.md  debug_grl_grad.py  eval_probe_auc.py
unlearning_reid/datasets/: __init__.py  common.py
unlearning_reid/eval/: __init__.py  reid_metrics.py
unlearning_reid/models/: __init__.py  removable.py  scrubber.py
unlearning_reid/train/: __init__.py  unlearn_mvp.py
unlearning_reid/utils/: __init__.py
